# bump-allocator-rs

./: Cargo.toml  LICENSE  README.md
examples/: vec.rs
src/: bump_pointer_local.rs  lib.rs  malloc_api.rs
